  as initialization is now a private variable
  `_DEFAULT_R_INTERACTIVE` in :mod:`rpy2.rinterface_lib.embedded`.

Bugs fixed
----------

- :func:`rpy2.rinterface.initr_checkenv` (aliased to
  :func:`rpy2.rinterface.initr`) did not include
  initialization parameters for `interactive`, `_want_setcallbacks`,
  and `_c_stack_limit` (issue #976).


Release 3.5.7
=============

New features
------------

- :class:`rpy2.robjects.conversion.Converter` objects are now also context
  managers. This makes the use of :func:`rpy2.robjects.conversion.localconverter`
  unnecessary as a converter can now be used directly with a Python `with`
  statement. The documentation was updated accordingly.

Bugs fixed
----------

- Building the C-extension could fail when the C compiler is not
  C99-compatible or requires to be specified C99 compatibility
  (issue #963).

- With the "R magic", converters in a local namespace were inadvertently
  skipped (the local namespace was not searched).

- Calling :func:`rpy2.rinterface.rternalize` before the embedded R is
  initialized was ending with a segfault. It is now raising an
  :class:`rpy2.rinterface_lib/embedded/RNotReady` (issue #971).

Changes
-------

- The default for the :class:`contextvars.ContextVar` holding
  conversion rules (:obj:`rpy2.robjects.conversion.converter`)
  is now a dummy converter raising errors about missing
  conversion rules. This behavior helps with troubleshooting
  Python code using multithreading without fetching the context
  (see issue #965).

- A warning is now issued when trying to convert a `DataFrame` with
  duplicate indexes (issue #811).


Release 3.5.6
=============

Bugs fixed
----------

- :class:`rpy2.rlike.container.OrdDict` objects were triggering an
  error when unpickled (PR #955).

- Function signature mapping not longer assumes that all default
  values are R vectors mapped to a `Vector` instance (PR #954).


Release 3.5.5
=============

New features
------------
  